--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Chris at 2020-05-26 21:29:57 -0400 
+%% Created for Chris at 2020-06-25 11:38:29 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -11,20 +11,20 @@
 @article{zaharia2016apache,
 	Author = {Zaharia, Matei and Xin, Reynold S and Wendell, Patrick and Das, Tathagata and Armbrust, Michael and Dave, Ankur and Meng, Xiangrui and Rosen, Josh and Venkataraman, Shivaram and Franklin, Michael J and others},
 	Date-Added = {2020-05-26 21:29:46 -0400},
-	Date-Modified = {2020-05-26 21:29:46 -0400},
-	Journal = {Communications of the ACM},
+	Date-Modified = {2020-06-25 11:26:16 -0400},
+	Journal = {Communications of the {A}{C}{M}},
 	Number = {11},
 	Pages = {56--65},
 	Publisher = {ACM New York, NY, USA},
-	Title = {Apache spark: a unified engine for big data processing},
+	Title = {Apache {S}park: a unified engine for big data processing},
 	Volume = {59},
 	Year = {2016}}
 
 @article{batmaz2019review,
 	Author = {Batmaz, Zeynep and Yurekli, Ali and Bilge, Alper and Kaleli, Cihan},
 	Date-Added = {2020-05-26 21:23:48 -0400},
-	Date-Modified = {2020-05-26 21:23:48 -0400},
-	Journal = {Artificial Intelligence Review},
+	Date-Modified = {2020-06-25 11:33:51 -0400},
+	Journal = {{Artificial} {Intelligence} {Review}},
 	Number = {1},
 	Pages = {1--37},
 	Publisher = {Springer},
@@ -35,8 +35,8 @@
 @article{deng2016deep,
 	Author = {Deng, Shuiguang and Huang, Longtao and Xu, Guandong and Wu, Xindong and Wu, Zhaohui},
 	Date-Added = {2020-05-26 21:23:42 -0400},
-	Date-Modified = {2020-05-26 21:23:42 -0400},
-	Journal = {IEEE transactions on neural networks and learning systems},
+	Date-Modified = {2020-06-25 11:37:44 -0400},
+	Journal = {IEEE {Transactions} on {Neural} {Networks} and {Learning} {Systems}},
 	Number = {5},
 	Pages = {1164--1177},
 	Publisher = {IEEE},
@@ -46,18 +46,18 @@
 
 @inproceedings{karatzoglou2017deep,
 	Author = {Karatzoglou, Alexandros and Hidasi, Bal{\'a}zs},
-	Booktitle = {Proceedings of the eleventh ACM conference on recommender systems},
+	Booktitle = {Proceedings of the {E}leventh ACM {conference} on {recommender systems}},
 	Date-Added = {2020-05-26 21:23:35 -0400},
-	Date-Modified = {2020-05-26 21:23:35 -0400},
+	Date-Modified = {2020-06-25 11:31:03 -0400},
 	Pages = {396--397},
 	Title = {Deep learning for recommender systems},
 	Year = {2017}}
 
 @inproceedings{wang2015collaborative,
 	Author = {Wang, Hao and Wang, Naiyan and Yeung, Dit-Yan},
-	Booktitle = {Proceedings of the 21th ACM SIGKDD international conference on knowledge discovery and data mining},
+	Booktitle = {Proceedings of the 21th ACM SIGKDD {International} {Conference} on {Knowledge} {Discovery} and {Data} {Mining}},
 	Date-Added = {2020-05-26 21:23:28 -0400},
-	Date-Modified = {2020-05-26 21:23:28 -0400},
+	Date-Modified = {2020-06-25 11:37:20 -0400},
 	Pages = {1235--1244},
 	Title = {Collaborative deep learning for recommender systems},
 	Year = {2015}}
@@ -65,8 +65,8 @@
 @article{shone2018deep,
 	Author = {Shone, Nathan and Ngoc, Tran Nguyen and Phai, Vu Dinh and Shi, Qi},
 	Date-Added = {2020-05-26 21:22:21 -0400},
-	Date-Modified = {2020-05-26 21:22:21 -0400},
-	Journal = {IEEE Transactions on Emerging Topics in Computational Intelligence},
+	Date-Modified = {2020-06-25 11:29:55 -0400},
+	Journal = {IEEE {Transactions} on {Emerging Topics} in {Computational Intelligence}},
 	Number = {1},
 	Pages = {41--50},
 	Publisher = {IEEE},
@@ -84,9 +84,9 @@
 
 @inproceedings{du2017deeplog,
 	Author = {Du, Min and Li, Feifei and Zheng, Guineng and Srikumar, Vivek},
-	Booktitle = {Proceedings of the 2017 ACM SIGSAC Conference on Computer and Communications Security},
+	Booktitle = {Proceedings of the 2017 ACM SIGSAC {Conference} on {Computer} and {Communications} {Security}},
 	Date-Added = {2020-05-26 21:22:01 -0400},
-	Date-Modified = {2020-05-26 21:22:01 -0400},
+	Date-Modified = {2020-06-25 11:31:57 -0400},
 	Pages = {1285--1298},
 	Title = {Deeplog: Anomaly detection and diagnosis from system logs through deep learning},
 	Year = {2017}}
@@ -101,19 +101,19 @@
 
 @incollection{havaei2016deep,
 	Author = {Havaei, Mohammad and Guizard, Nicolas and Larochelle, Hugo and Jodoin, Pierre-Marc},
-	Booktitle = {Machine learning for health informatics},
+	Booktitle = {{Machine} {L}earning for {health} {informatics}},
 	Date-Added = {2020-05-26 21:20:59 -0400},
-	Date-Modified = {2020-05-26 21:20:59 -0400},
+	Date-Modified = {2020-06-25 11:31:24 -0400},
 	Pages = {125--148},
 	Publisher = {Springer},
-	Title = {Deep learning trends for focal brain pathology segmentation in MRI},
+	Title = {Deep learning trends for focal brain pathology segmentation in {M}{R}{I}},
 	Year = {2016}}
 
 @inproceedings{bar2015chest,
 	Author = {Bar, Yaniv and Diamant, Idit and Wolf, Lior and Lieberman, Sivan and Konen, Eli and Greenspan, Hayit},
-	Booktitle = {2015 IEEE 12th international symposium on biomedical imaging (ISBI)},
+	Booktitle = {2015 IEEE 12th {International} {Symposium} on {Biomedical} {Imaging} (ISBI)},
 	Date-Added = {2020-05-26 21:20:42 -0400},
-	Date-Modified = {2020-05-26 21:20:42 -0400},
+	Date-Modified = {2020-06-25 11:35:23 -0400},
 	Organization = {IEEE},
 	Pages = {294--297},
 	Title = {Chest pathology detection using deep learning with non-medical training},
@@ -122,8 +122,8 @@
 @article{campanella2019clinical,
 	Author = {Campanella, Gabriele and Hanna, Matthew G and Geneslaw, Luke and Miraflor, Allen and Silva, Vitor Werneck Krauss and Busam, Klaus J and Brogi, Edi and Reuter, Victor E and Klimstra, David S and Fuchs, Thomas J},
 	Date-Added = {2020-05-26 21:20:32 -0400},
-	Date-Modified = {2020-05-26 21:20:32 -0400},
-	Journal = {Nature medicine},
+	Date-Modified = {2020-06-25 11:33:38 -0400},
+	Journal = {Nature {medicine}},
 	Number = {8},
 	Pages = {1301--1309},
 	Publisher = {Nature Publishing Group},
@@ -134,8 +134,8 @@
 @article{stead2018clinical,
 	Author = {Stead, William W},
 	Date-Added = {2020-05-26 21:20:25 -0400},
-	Date-Modified = {2020-05-26 21:20:25 -0400},
-	Journal = {Jama},
+	Date-Modified = {2020-06-25 11:29:08 -0400},
+	Journal = {{J}{A}{M}{A}},
 	Number = {11},
 	Pages = {1107--1108},
 	Publisher = {American Medical Association},
@@ -146,11 +146,11 @@
 @article{lehman2019mammographic,
 	Author = {Lehman, Constance D and Yala, Adam and Schuster, Tal and Dontchos, Brian and Bahl, Manisha and Swanson, Kyle and Barzilay, Regina},
 	Date-Added = {2020-05-26 21:20:18 -0400},
-	Date-Modified = {2020-05-26 21:20:18 -0400},
+	Date-Modified = {2020-06-25 11:30:35 -0400},
 	Journal = {Radiology},
 	Number = {1},
 	Pages = {52--58},
-	Publisher = {Radiological Society of North America},
+	Publisher = {{Radiological Society of North America}},
 	Title = {Mammographic breast density assessment using deep learning: clinical implementation},
 	Volume = {290},
 	Year = {2019}}
@@ -158,17 +158,17 @@
 @article{otter2020survey,
 	Author = {Otter, Daniel W and Medina, Julian R and Kalita, Jugal K},
 	Date-Added = {2020-05-26 21:19:11 -0400},
-	Date-Modified = {2020-05-26 21:19:11 -0400},
-	Journal = {IEEE Transactions on Neural Networks and Learning Systems},
+	Date-Modified = {2020-06-25 11:30:13 -0400},
+	Journal = {IEEE {Transactions} on {Neural Networks} and {Learning Systems}},
 	Publisher = {IEEE},
 	Title = {A Survey of the Usages of Deep Learning for Natural Language Processing},
 	Year = {2020}}
 
 @inproceedings{deselaers2009deep,
 	Author = {Deselaers, Thomas and Hasan, Sa{\v{s}}a and Bender, Oliver and Ney, Hermann},
-	Booktitle = {Proceedings of the Fourth Workshop on Statistical Machine Translation},
+	Booktitle = {Proceedings of the {Fourth} {Workshop} on {Statistical} {Machine} {Translation}},
 	Date-Added = {2020-05-26 21:19:03 -0400},
-	Date-Modified = {2020-05-26 21:19:03 -0400},
+	Date-Modified = {2020-06-25 11:32:20 -0400},
 	Organization = {Association for Computational Linguistics},
 	Pages = {233--241},
 	Title = {A deep learning approach to machine transliteration},
@@ -177,33 +177,32 @@
 @article{socher2012deep,
 	Author = {Socher, Richard and Bengio, Yoshua and Manning, Chris},
 	Date-Added = {2020-05-26 21:18:46 -0400},
-	Date-Modified = {2020-05-26 21:18:46 -0400},
-	Journal = {Tutorial at Association of Computational Logistics (ACL)},
-	Publisher = {Citeseer},
-	Title = {Deep learning for NLP},
+	Date-Modified = {2020-06-25 11:24:45 -0400},
+	Journal = {{T}utorial at {A}ssociation of {C}omputational {L}ogistics ({A}{C}{L})},
+	Title = {Deep learning for {NLP}},
 	Year = {2012}}
 
 @article{young2018recent,
 	Author = {Young, Tom and Hazarika, Devamanyu and Poria, Soujanya and Cambria, Erik},
 	Date-Added = {2020-05-26 21:18:36 -0400},
-	Date-Modified = {2020-05-26 21:18:36 -0400},
-	Journal = {ieee Computational intelligenCe magazine},
+	Date-Modified = {2020-06-25 11:36:07 -0400},
+	Journal = {IEEE {Computational} {Intelligence} {Magazine}},
 	Number = {3},
 	Pages = {55--75},
 	Publisher = {IEEE},
-	Title = {Recent trends in deep learning based natural language processing},
+	Title = {Recent trends in deep learning based {Natural} {Language} {Processing}},
 	Volume = {13},
 	Year = {2018}}
 
 @article{zhang2016deep,
 	Author = {Zhang, Sai and Zhou, Jingtian and Hu, Hailin and Gong, Haipeng and Chen, Ligong and Cheng, Chao and Zeng, Jianyang},
 	Date-Added = {2020-05-26 21:17:58 -0400},
-	Date-Modified = {2020-05-26 21:17:58 -0400},
-	Journal = {Nucleic acids research},
+	Date-Modified = {2020-06-25 11:26:40 -0400},
+	Journal = {{N}ucleic {A}cids {R}esearch},
 	Number = {4},
 	Pages = {e32--e32},
 	Publisher = {Oxford University Press},
-	Title = {A deep learning framework for modeling structural features of RNA-binding protein targets},
+	Title = {A deep learning framework for modeling structural features of {R}{N}{A}-binding protein targets},
 	Volume = {44},
 	Year = {2016}}
 
@@ -221,8 +220,8 @@
 @article{spencer2014deep,
 	Author = {Spencer, Matt and Eickholt, Jesse and Cheng, Jianlin},
 	Date-Added = {2020-05-26 21:17:37 -0400},
-	Date-Modified = {2020-05-26 21:17:37 -0400},
-	Journal = {IEEE/ACM transactions on computational biology and bioinformatics},
+	Date-Modified = {2020-06-25 11:36:34 -0400},
+	Journal = {IEEE/ACM {T}ransactions on {Computational} {Biology} and {Bioinformatics}},
 	Number = {1},
 	Pages = {103--112},
 	Publisher = {IEEE},
@@ -233,20 +232,20 @@
 @article{alipanahi2015predicting,
 	Author = {Alipanahi, Babak and Delong, Andrew and Weirauch, Matthew T and Frey, Brendan J},
 	Date-Added = {2020-05-26 21:17:31 -0400},
-	Date-Modified = {2020-05-26 21:17:31 -0400},
-	Journal = {Nature biotechnology},
+	Date-Modified = {2020-06-25 11:34:17 -0400},
+	Journal = {Nature {biotechnology}},
 	Number = {8},
 	Pages = {831--838},
-	Publisher = {Nature Publishing Group},
-	Title = {Predicting the sequence specificities of DNA-and RNA-binding proteins by deep learning},
+	Publisher = {{N}ature {P}ublishing {G}roup},
+	Title = {Predicting the sequence specificities of {D}{N}{A}-and {R}{N}{A}-binding proteins by deep learning},
 	Volume = {33},
 	Year = {2015}}
 
 @article{voulodimos2018deep,
 	Author = {Voulodimos, Athanasios and Doulamis, Nikolaos and Doulamis, Anastasios and Protopapadakis, Eftychios},
 	Date-Added = {2020-05-26 21:16:48 -0400},
-	Date-Modified = {2020-05-26 21:16:48 -0400},
-	Journal = {Computational intelligence and neuroscience},
+	Date-Modified = {2020-06-25 11:28:52 -0400},
+	Journal = {Computational {I}ntelligence and {N}euroscience},
 	Publisher = {Hindawi},
 	Title = {Deep learning for computer vision: A brief review},
 	Volume = {2018},
@@ -276,7 +275,7 @@
 	Date-Added = {2020-05-26 18:22:34 -0400},
 	Date-Modified = {2020-05-26 18:22:34 -0400},
 	School = {Montana State University-Bozeman, College of Engineering},
-	Title = {A cellular computer to implement the Kalman filter algorithm},
+	Title = {A cellular computer to implement the {K}alman filter algorithm},
 	Year = {1969}}
 
 @article{chetlur2014cudnn,
@@ -287,17 +286,19 @@
 	Title = {cudnn: Efficient primitives for deep learning},
 	Year = {2014}}
 
-@online{projecthydrogensite,
-    author = "Jules Damji",
-    title = "Bay Area Apache Spark Meetup Summary at Databricks HQ",
-    url  = "https://databricks.com/blog/2018/07/25/bay-area-apache-spark-meetup-summary-databricks-hq.html",
-    keywords = "spark,hydrogen"
-}
+@manual{projecthydrogensite,
+	Author = {{Jules Damji}},
+	Date-Modified = {2020-06-25 11:27:00 -0400},
+	Keywords = {spark,hydrogen},
+	Title = {{Bay Area Apache Spark Meetup Summary} at {Databricks} {H}{Q}},
+	Url = {https://databricks.com/blog/2018/07/25/bay-area-apache-spark-meetup-summary-databricks-hq.html},
+	Bdsk-Url-1 = {https://databricks.com/blog/2018/07/25/bay-area-apache-spark-meetup-summary-databricks-hq.html}}
 
-@online{projecthydrogenpres,
-  author          = {Xiangrui Meng},
-  title           = {Project Hydrogen: State-of-the-Art Deep Learning on Apache Spark},
-  year            = {2018},
-  addendum = "(accessed: 06.10.2020)",
-  url             = {https://www.slideshare.net/databricks/project-hydrogen-stateoftheart-deep-learning-on-apache-spark}
-}
+@manual{projecthydrogenpres,
+	Addendum = {(accessed: 06.10.2020)},
+	Author = {Xiangrui Meng},
+	Date-Modified = {2020-06-25 11:27:14 -0400},
+	Title = {{P}roject {H}ydrogen: {S}tate-of-the-{A}rt {D}eep {L}earning on {A}pache {S}park},
+	Url = {https://www.slideshare.net/databricks/project-hydrogen-stateoftheart-deep-learning-on-apache-spark},
+	Year = {2018},
+	Bdsk-Url-1 = {https://www.slideshare.net/databricks/project-hydrogen-stateoftheart-deep-learning-on-apache-spark}}
