--- a/paper/jampi-spark-dotmatrix.tex
+++ b/paper/jampi-spark-dotmatrix.tex
@@ -333,7 +333,7 @@ Comparative analysis of runtimes over a range of matrix sizes reveals that JAMPI
 
 Memory usage has been a documented limiting factor, with pure MLlib reaching execution limits at relatively trivial matrix dimensions per processor (Table~\ref{tab:out_of_memory}). While over-partitioning slightly increases the maximum matrix size, MLlib suffers from not only lower performance but also a memory consumption upper bound that limits its ability to scale to larger problem sizes.
 
-Our research indicates that for a 10,240 $\times$ 10,240 element standard matrix, JAMPI and MPI perform approximately equally (4,889 MB vs 5,108 MB, respectively, for 256 cores), while both over-partitioned and regular MLlib execution creates a marginally larger memory footprint (6,049 MB and 6,423 MB, respectively, for 256 cores).  However, with increasing problem size, differences become vastly apparent: for a 30,720 $\times$ 30,720 element matrix, MPI and JAMPI continue to require a constant memory footprint (5,572 MB and 6,084 MB, respectively), while the same problem size requires 24,525 MB with over-partitioning and 29,445 MB without. In other words, JAMPI and MPI memory burden is constant regardless of problem size, while at the non-trivial 30,720 $\times$ 30,720 matrix size, MLlib requires a 4.03 (with over-partitioning) to 4.84 (without over-partitioning) times larger memory allocation.
+Our research indicates that for a 10,240 $\times$ 10,240 element standard matrix, JAMPI and MPI perform approximately equally (4,889 MB vs 5,108 MB, respectively, for 256 cores), while both over-partitioned and regular MLlib execution creates a marginally larger memory footprint (6,049 MB and 6,423 MB, respectively, for 256 cores).  However, with increasing problem size, differences become vastly apparent: for a 30,720 $\times$ 30,720 element matrix, MPI and JAMPI continue to require a constant memory footprint (5,572 MB and 6,084 MB, respectively), while the same problem size requires 24,525 MB with over-partitioning and 29,445 MB without. In other words, JAMPI and MPI memory burden increases constantly regardless of the number of cores while MLLib memory consumption is described by a function that increases extremely fast as shown in <REF THE FIG HERE>. For instance, when processing 30,720 $\times$ 30,720 matrix size, MLlib requires a 4.03 (with over-partitioning) to 4.84 (without over-partitioning) times larger memory allocation.
 
 Comparative analysis of memory usage (see Figure~\ref{fig:memory_usage}) shows that JAMPI is generally on par (within 30\%) of the pure MPI implementation, while MLlib typically requires approximately four times the amount of memory allocation that the MPI based approaches demand, with regular MLlib requiring typically 15\% to 50\% more memory than over-partitioned implementations.
 
