--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -1,12 +1,22 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Chris at 2020-06-25 11:38:29 -0400 
+%% Created for Chris at 2020-07-10 10:25:04 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{jampi,
+	Date-Added = {2020-07-10 10:23:34 -0400},
+	Date-Modified = {2020-07-10 10:24:26 -0400},
+	author = {Foldi, Tamas and von Csefalvay, Chris and Perez, Nicolas A.},
+	Title = {JAMPI: Efficient matrix multiplication in Spark using Barrier Execution Mode},
+	Publisher = {Zenodo},
+	Version = {0.9.0},
+	doi = {10.5281/zenodo.3908556},
+	url = {http://dx.doi.org10.5281/zenodo.3908556}}
 
 @article{zaharia2016apache,
 	Author = {Zaharia, Matei and Xin, Reynold S and Wendell, Patrick and Das, Tathagata and Armbrust, Michael and Dave, Ankur and Meng, Xiangrui and Rosen, Josh and Venkataraman, Shivaram and Franklin, Michael J and others},
